test/static/bad/no_space_after_directive.mly
%tokenA
%start<unit> foo
  (* This was accepted until 2020/06/06! *)

%%

foo:
  A {}
