test/static/bad/no_space_after_directive.exp
File "no_space_after_directive.mly", line 1, characters 0-7:
Error: unknown directive: tokenA.
